<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ItemPreview">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@android:string/untitled"
        android:src="@drawable/green_rectangle" />

    <TextView
        android:id="@+id/selectedMaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/selectedName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-55dp"
        android:text="Chicken"
        android:textSize="18sp"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/selectedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="G-Bag"
        android:textSize="15sp"
        android:textColor="#fff" />

    <ImageView
        android:layout_width="190dp"
        android:layout_height="140dp"
        android:id="@+id/mywhite"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:src="@drawable/white_rectangle" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="138dp"
        android:id="@+id/selectedImg"
        android:layout_alignTop="@+id/mywhite"
        android:layout_centerHorizontal="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/itemQuantityO"
            android:layout_below="@+id/mywhite">
            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/quant"
                android:inputType="number"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/selectedPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="34dp"
            android:layout_marginTop="243dp"
            android:text="@string/KSH" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/prefLocationO"
            android:layout_below="@+id/itemQuantityO">
            <EditText
                android:id="@+id/prefLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:hint="@string/prefLocation"
                android:inputType="text"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descTv"
        android:text="@string/DESC"
        android:textColor="#5887F9"
        android:layout_below="@+id/prefLocationO"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectedDesc"
        android:text="@string/lorem"
        android:layout_margin="15dp"
        android:background="#FAFAFA"
        android:layout_below="@id/descTv"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_rectangle"
        android:text="@string/cnp"
        android:textColor="#fff"
        android:layout_below="@id/selectedDesc"/>

    </RelativeLayout>

</ScrollView>